# web-ui-test

./: .gitignore  LICENSE  README.md  config.local.env  config.prod.env  config.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
etc/selenoid/: browsers.json  compose.yaml
example/pytest_option/: conftest.py  pytest_option_test.py
example/pytest_settings/: settings.py
example/settings/: settings.json  settings.py
run/: tests_and_reserve_report.sh
tests/: test_serach.py
web_test/: web.py
web_test/assist/: project.py
web_test/assist/allure/: gherkin.py  video.py
web_test/assist/assertion/: assertion.py
web_test/assist/requests/: http.py  method.py
web_test/assist/selene/shared/: hook.py
web_test/assist/selenium/: cookie_manager.py  new_by.py  recognize.py
web_test/assist/webdriver_manager/: set_up.py
web_test/common/: __init__.py  convert.py  file.py  random.py  time.py
web_test/entity/: edit_table.py  form.py
web_test/mock/: data.json  mock_send_data.py
web_test/model/: edit_table.py  form.py  locator.py  user.py
web_test/pages/: google.py
web_test/test_markers/: mark.py
