[tool.poetry]
name = "web-ui-test"
version = "0.1.0"
description = "python + pytest + selene + allure web tests project"
authors = ["g_xin <g_xin@outlook.com>"]
readme = "README.md"
packages = [{include = "web_ui_test"}]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.28.2"
selene = {version = "^2.0.0b17", allow-prereleases = true}
allure-pytest = "^2.13.1"
ddddocr = "^1.4.7"
loguru = "^0.6.0"
pytest = "^7.2.2"
pytest-html = "^3.2.0"
pytest-rerunfailures = "^11.1.2"
pytest-ordering = "^0.6"
pytest-xdist = "^3.2.1"
pydantic = "^1.10.6"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
